# drf_cw

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/fixtures/: habits_data.json
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_period.py  0004_alter_habit_time_to_action.py  0005_alter_habit_time_to_action.py  0006_alter_habit_creator.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/fixtures/: users_data.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
